# ETL

./: .clang-format  CMakeLists.txt  LICENSE
.vscore/: launch.json
include/: ExpressionTemplates.hpp
include/private/: BaseExpression.hpp  CompositeExpression.hpp  ExpressionGenerators.hpp  ExpressionInterface.hpp  ExpressionOperations.hpp  ExpressionProjections.hpp  FundamentalExpressions.hpp  Operators.hpp
src/: Argument.hpp  Main.cpp
